Add macOS/Apple Silicon build patches for EDK II ShellPkg
- Fix Apple Silicon (arm64) architecture detection in BaseTools
- Resolve C compilation issues (UINT8_MAX, bitwise operations, pointer comparisons)
- Add Python 2/3 compatibility fixes for BaseTools scripts
- Include automated patch application and validation scripts
- Add comprehensive build documentation and README
- Update .gitignore to exclude build artifacts

Successfully builds Shell.efi for x64 using XCODE5 toolchain on macOS.

Build command:
export PATH="/Library/Frameworks/Python.framework/Versions/2.7/bin:$PATH"
source edksetup.sh
build -a X64 -t XCODE5 -b RELEASE -p ShellPkg/ShellPkg.dsc

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,44 @@
+# EDK II Build Artifacts
 Build/
+*.efi
+*.lib
+*.obj
+*.dll
+*.map
+*.pdb
+
+# Generated Configuration Files
+Conf/build_rule.txt
+Conf/target.txt
+Conf/tools_def.txt
+
+# Python Cache
+__pycache__/
+*.pyc
+*.pyo
+
+# macOS Files
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Backup Files
+*.bak
+*.orig
+*.swp
+*.tmp
+
+# Editor Files
+.vscode/
+.idea/
+*.sublime-*
+
+# Compiled BaseTools
+BaseTools/Source/C/bin/
+BaseTools/BinWrappers/PosixLike/
+
+# Log Files
+*.log
+
+# Original ignore entries
 tags/
